# artifacts/api-server/src/routes/index.ts
@@ -8,6 +8,7 @@ import entitlementsRouter from "./entitlements";
 import progressRouter from "./progress";
 import subscriptionRouter from "./subscription";
 import epppPurchaseRouter from "./eppp-purchase";
+import epppStudyPlanRouter from "./eppp-study-plan";
 import feedbackRouter from "./feedback";
 import customDecksRouter from "./custom-decks";
 import leaderboardRouter from "./leaderboard";
@@ -41,6 +42,7 @@ router.use(entitlementsRouter);
 router.use(progressRouter);
 router.use(subscriptionRouter);
 router.use(epppPurchaseRouter);
+router.use(epppStudyPlanRouter);
 router.use(feedbackRouter);
 router.use(customDecksRouter);
 router.use(leaderboardRouter);
